# zephyr_portenta_h7

./: .gitmodules  CMakeLists.txt  Kconfig.board  Kconfig.defconfig  README.md  app.overlay  board.c  board.cmake  portenta_h7.dtsi  portenta_h7_m7.dts  portenta_h7_m7.yaml  portenta_h7_m7_defconfig  prj.conf  usb_console.conf  usb_console.overlay
boards/arm/portenta_h7/: CMakeLists.txt  Kconfig.board  board.c  portenta_h7.dtsi  portenta_h7_m4.dts  portenta_h7_m4_defconfig  portenta_h7_m7.dts  portenta_h7_m7_defconfig
modules/wifi/: CMakeLists.txt  Kconfig
modules/wifi/drivers/: cyabs_rtos_zephyr.c  cyhal_gpio_zephyr.c  cyhal_sdio_zephyr.c
modules/wifi/dts/bindings/: st,stm32-wifi-whd-sdio.yaml
modules/wifi/zephyr/: module.yml
overlays/: usb_console.overlay
patches/: 0001-modified-usb-for-stm32-h7.patch  usb_temp.patch
src/: main.c
tests/: CMakeLists.txt  prj.conf  testcase.yaml
tests/src/: test_main.c
